workspace/log/build_2024-11-11_10-56-15/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::move(const string&, double, const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:235:29: error: ‘spinOnce’ is not a member of ‘rclcpp’
  235 |                     rclcpp::spinOnce();
      |                             ^~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/template_drone_control_node.cpp:211:16: warning: unused variable ‘tolerance’ [-Wunused-variable]
  211 |         double tolerance = (finish_type == "hard") ? 0.2 : 0.5;
      |                ^~~~~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
